# g6

./: .env.example  .gitignore  .mcp.json  Cargo.toml  Makefile  README.md
.claude/: settings.json
.claude/skills/simteam/: SKILL.md  agent.md  check.py  g6.py  seed.py
desktop/: vite.config.ts
desktop/scripts/: set-version-from-tag.mjs
desktop/src-tauri/: .gitignore  tauri.dev.conf.json
desktop/src-tauri/src/: main.rs  migration_command_tests.rs
desktop/src/app/: AppShell.helpers.test.mjs  router.tsx
docs/contributing/: naming_conventions.md
frontend/: .env  .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: jdenticon.d.ts  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  migration.rs  migration_avatar_tests.rs  ptt_shortcut.rs
frontend/src-tauri/src/commands/: pairing.rs  profile.rs  project_git_exec.rs  window_vibrancy.rs
frontend/src-tauri/src/commands/team_snapshot/: tests.rs
frontend/src-tauri/src/huddle/: preprocessing.rs  relay_api.rs  state.rs  transcription.rs
frontend/src-tauri/src/managed_agents/: persona_avatars.rs  personas.rs  team_snapshot.rs
frontend/src-tauri/src/managed_agents/config_bridge/: buzz_agent.rs  reader_tests.rs  schema_walker.rs
frontend/src-tauri/src/managed_agents/discovery/tests/: managed_path_resolution.rs
frontend/src-tauri/src/managed_agents/personas/: tests.rs
frontend/src-tauri/src/migration/: materialize.rs
frontend/src-tauri/src/nostr_convert/: user_search.rs
frontend/src-tauri/src/templates/: mod.rs
migrations/: 0001_init.sql  0002_user_profile.sql
mobile/: .env.json.example  .gitignore  analysis_options.yaml
mobile/ios/: .gitignore
mobile/lib/: main.dart
mobile/scripts/: check-file-sizes.mjs
mobile/test/: widget_test.dart
plans/: web-backend-integration.mdx
scripts/: smoke.py
src/: api.rs  auth.rs  main.rs  mentions.rs  slack.rs
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  format.check.ts  format.ts  main.tsx  styles.css  types.ts  useRtm.ts
web/src/app/: App.tsx  (+3 more)
(+438 files in other folders)
