[package]
name = "gear6"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
# runtime queries only (no `query!` macro) so no DATABASE_URL is needed at build time;
# `macros` is here purely for #[derive(sqlx::FromRow)].
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
password-auth = "1.0" # argon2, passwords only
sha2 = "0.10"         # token lookup; tokens are 128-bit random, argon2 would be the wrong tool
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7" # Slack SDKs post form-encoded by default
base64 = "0.22"
rand = "0.10"
futures-util = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
