[workspace]

[package]
name = "buzz-desktop"
version = "0.4.23"
description = "Buzz desktop app"
authors = ["you"]
edition = "2021"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin (a Windows issue,
# rust-lang/cargo#8519).
name = "buzz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Thin desktop shell: window + webview only. The frontend talks to gear6 directly
# (VITE_GEAR6=1), so no command handlers / nostr backend deps are needed. Only the
# crates.io Tauri plugins the frontend touches at boot are registered.
[dependencies]
# serde_json is required at the crate root by tauri::generate_context!.
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
# Dependency kept for its capability permission files (capabilities/default.json
# references updater:*), but the plugin is not registered at runtime — it needs a
# release-only signing pubkey. Mirrors the original OSS dev build.
tauri-plugin-updater = "2"
